--- a/composer.json
+++ b/composer.json
@@ -17,43 +17,43 @@
     ],
     "require": {
         "php": "^8.0",
-        "symfony/console": "^4.4.20|^5.3",
+        "symfony/console": "^4.4.20|^5.3|^6.0",
         "doctrine/orm": "^2.9",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "dragonmantank/cron-expression": "^3.1",
-        "symfony/framework-bundle": "^4.4.20|^5.3",
-        "symfony/twig-bundle": "^4.4.20|^5.3",
-        "symfony/translation": "^4.4.20|^5.3",
-        "symfony/form": "^4.4.20|^5.3",
-        "symfony/asset": "^4.4.20|^5.3",
-        "symfony/validator": "^4.4.20|^5.3",
+        "symfony/framework-bundle": "^4.4.20|^5.3|^6.0",
+        "symfony/twig-bundle": "^4.4.20|^5.3|^6.0",
+        "symfony/translation": "^4.4.20|^5.3|^6.0",
+        "symfony/form": "^4.4.20|^5.3|^6.0",
+        "symfony/asset": "^4.4.20|^5.3|^6.0",
+        "symfony/validator": "^4.4.20|^5.3|^6.0",
         "nesbot/carbon": "^2.43",
-        "symfony/dotenv": "^4.4.20|^5.3",
-        "symfony/lock": "^4.4.20|^5.3",
+        "symfony/dotenv": "^4.4.20|^5.3|^6.0",
+        "symfony/lock": "^4.4.20|^5.3|^6.0",
         "sensio/framework-extra-bundle": "^6.1",
-        "symfony/config": "^4.4.20|^5.3",
-        "symfony/dependency-injection": "^4.4.20|^5.3",
-        "symfony/property-access": "^4.4.20|^5.3",
-        "symfony/http-kernel": "^4.4.20|^5.3",
-        "symfony/yaml": "^4.4.20|^5.3",
+        "symfony/config": "^4.4.20|^5.3|^6.0",
+        "symfony/dependency-injection": "^4.4.20|^5.3|^6.0",
+        "symfony/property-access": "^4.4.20|^5.3|^6.0",
+        "symfony/http-kernel": "^4.4.20|^5.3|^6.0",
+        "symfony/yaml": "^4.4.20|^5.3|^6.0",
         "lorisleiva/cron-translator": "^0.2"
     },
     "require-dev": {
         "ext-pcntl": "*",
         "phpunit/phpunit": "^8.0|^9.3",
         "doctrine/doctrine-fixtures-bundle": "^3.4.0",
-        "symfony/debug-bundle": "^4.4.20|^5.3",
-        "symfony/dom-crawler": "^4.4.20|^5.3",
-        "symfony/css-selector": "^4.4.20|^5.3",
+        "symfony/debug-bundle": "^4.4.20|^5.3|^6.0",
+        "symfony/dom-crawler": "^4.4.20|^5.3|^6.0",
+        "symfony/css-selector": "^4.4.20|^5.3|^6.0",
         "liip/test-fixtures-bundle": "^2.0.1",
-        "symfony/browser-kit": "^4.4.20|^5.3",
+        "symfony/browser-kit": "^4.4.20|^5.3|^6.0",
         "symfony/maker-bundle": "^1.31",
         "jetbrains/phpstorm-attributes": "^1.0"
     },
     "suggest": {
         "ext-pcntl": "For using the scheduler daemon",
-        "symfony/notifier": "Send Notifications (E-Mails) ^5.3",
+        "symfony/notifier": "Send Notifications (E-Mails) ^5.3|^6.0",
         "twig/cssinliner-extra": "Needed for E-Mail Notification ^3.0",
         "twig/inky-extra": "Needed for E-Mail Notification ^3.0",
         "ext-posix": "*"
