--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         #run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction
         # To install Laminas Version 4.5.x with php 8.1 support
-        run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction -with-all-dependencies
+        run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --with-all-dependencies
 
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
