--- a/composer.json
+++ b/composer.json
@@ -17,38 +17,38 @@
     ],
     "require": {
         "php": "^8.0",
-        "symfony/console": "^4.4.20|^5.3|^6.0",
+        "symfony/console": "^5.3|^6.0",
         "doctrine/orm": "^2.9",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "laminas/laminas-code": "4.5.x-dev",
         "dragonmantank/cron-expression": "^3.1",
-        "symfony/framework-bundle": "^4.4.20|^5.3|^6.0",
-        "symfony/twig-bundle": "^4.4.20|^5.3|^6.0",
-        "symfony/translation": "^4.4.20|^5.3|^6.0",
-        "symfony/form": "^4.4.20|^5.3|^6.0",
-        "symfony/asset": "^4.4.20|^5.3|^6.0",
-        "symfony/validator": "^4.4.20|^5.3|^6.0",
+        "symfony/framework-bundle": "^5.3|^6.0",
+        "symfony/twig-bundle": "^5.3|^6.0",
+        "symfony/translation": "^5.3|^6.0",
+        "symfony/form": "^5.3|^6.0",
+        "symfony/asset": "^5.3|^6.0",
+        "symfony/validator": "^5.3|^6.0",
         "nesbot/carbon": "^2.53",
-        "symfony/dotenv": "^4.4.20|^5.3|^6.0",
-        "symfony/lock": "^4.4.20|^5.3|^6.0",
+        "symfony/dotenv": "^5.3|^6.0",
+        "symfony/lock": "^5.3|^6.0",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/config": "^4.4.20|^5.3|^6.0",
-        "symfony/dependency-injection": "^4.4.20|^5.3|^6.0",
-        "symfony/property-access": "^4.4.20|^5.3|^6.0",
-        "symfony/http-kernel": "^4.4.20|^5.3|^6.0",
-        "symfony/yaml": "^4.4.20|^5.3|^6.0",
+        "symfony/config": "^5.3|^6.0",
+        "symfony/dependency-injection": "^5.3|^6.0",
+        "symfony/property-access": "^5.3|^6.0",
+        "symfony/http-kernel": "^5.3|^6.0",
+        "symfony/yaml": "^5.3|^6.0",
         "lorisleiva/cron-translator": "^0.2"
     },
     "require-dev": {
         "ext-pcntl": "*",
         "phpunit/phpunit": "^9.5.9",
         "doctrine/doctrine-fixtures-bundle": "^3.4.0",
-        "symfony/debug-bundle": "^4.4.20|^5.3|^6.0",
-        "symfony/dom-crawler": "^4.4.20|^5.3|^6.0",
-        "symfony/css-selector": "^4.4.20|^5.3|^6.0",
+        "symfony/debug-bundle": "^5.3|^6.0",
+        "symfony/dom-crawler": "^5.3|^6.0",
+        "symfony/css-selector": "^5.3|^6.0",
         "liip/test-fixtures-bundle": "^2.0.1",
-        "symfony/browser-kit": "^4.4.20|^5.3|^6.0",
+        "symfony/browser-kit": "^5.3|^6.0",
         "symfony/maker-bundle": "^1.33",
         "jetbrains/phpstorm-attributes": "^1.0"
     },
