feat: bump symfony 5.3 to 5.4 (minimum-stability)

--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,7 @@
         "psr-4": {
             "App\\Tests\\": "Tests/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
