--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "symfony": {
+            "require": "^5.4|^6.0"
+        }
+    }
 }
