--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": ">=8.0.2",
         "symfony/console": "^5.4|^6.0",
         "doctrine/orm": "^2.9",
         "doctrine/doctrine-bundle": "^2.4",
