--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/framework-bundle": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
+        "symfony/finder": "^5.4|^6.0",
         "symfony/form": "^5.4|^6.0",
         "symfony/asset": "^5.4|^6.0",
         "symfony/validator": "^5.4|^6.0",
