feat: try to fix php 8.1 prefer-lowest

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         "php": ">=8.0.2",
         "symfony/console": "^5.4|^6.0",
         "doctrine/orm": "^2.9",
-        "doctrine/doctrine-bundle": "^2.4",
-        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/doctrine-bundle": "^2.4.2",
+        "doctrine/dbal": "^2.13.3",
+        "doctrine/doctrine-migrations-bundle": "^3.1.0",
         "laminas/laminas-code": "4.5.x-dev",
         "dragonmantank/cron-expression": "^3.1",
         "symfony/framework-bundle": "^5.4|^6.0",
@@ -39,6 +40,7 @@
         "symfony/property-access": "^5.4|^6.0",
         "symfony/http-kernel": "^5.4|^6.0",
         "symfony/yaml": "^5.4|^6.0",
+        "symfony/var-dumper": "^5.4|^6.0",
         "twig/twig": "^3.3",
         "lorisleiva/cron-translator": "^0.2"
     },
