feat: try to fix php 8.1 prefer-lowest

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/dependency-injection": "^5.4|^6.0",
         "symfony/property-access": "^5.4|^6.0",
         "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/routing": "^5.4|^6.0",
         "symfony/yaml": "^5.4|^6.0",
         "symfony/var-dumper": "^5.4|^6.0",
         "twig/twig": "^3.3",
@@ -75,10 +76,17 @@
             "App\\Tests\\": "Tests/"
         }
     },
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "symfony": {
+            "allow-contrib": false,
             "require": "^5.4|^6.0"
         }
     }
