--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -41,6 +41,8 @@ jobs:
         run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --with-all-dependencies
 
       - name: Execute tests
+        env:
+          SYMFONY_DEPRECATIONS_HELPER: 'weak'
         run: vendor/bin/phpunit --verbose
 
 
