feat: allow dbal 3.x

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "doctrine/orm": "^2.9",
         "doctrine/doctrine-bundle": "^2.4.2",
         "doctrine/collections": "^1.6.8",
-        "doctrine/dbal": "^2.13.3",
-        "doctrine/doctrine-migrations-bundle": "^3.1.0",
+        "doctrine/dbal": "^2.13.3 || ^3.0",
         "doctrine/persistence": "^2.2.2",
         "laminas/laminas-code": "4.4",
         "dragonmantank/cron-expression": "^3.1",
