--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -17,7 +17,7 @@ jobs:
         #php: ['8.0', '8.1']
         php: ['8.0']
         stability: [ prefer-lowest, prefer-stable ]
-        symfony-version: ['5.3']
+        symfony-version: ['5.4', '6.0']
         experimental: [false]
         include:
           - php: '8.1'
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Cache dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.composer/cache/files
           key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
