--- a/.github/workflows/tests-upcoming-symfony.yaml
+++ b/.github/workflows/tests-upcoming-symfony.yaml
@@ -12,7 +12,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        symfony-version: ['5.4.x@dev', '6.0.x@dev']
+        symfony-version: ['6.1.x@dev']
     steps:
       - name: 'Checkout code'
         uses: actions/checkout@v2.3.3
@@ -21,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@2.7.0
         with:
           coverage: none
-          php-version: '8.0'
+          php-version: '8.1'
           tools: composer:v2
           extensions: pcov, dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
           ini-values: date.timezone=UTC
