--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -1,12 +1,7 @@
 # .github/workflows/code_checks.yaml
 name: Code_Checks
 
-on:
-  pull_request: null
-  push:
-    branches:
-      - master
-      - dev
+on: ["push", "pull_request"]
 
 jobs:
   tests:
@@ -14,7 +9,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #php: ['8.0', '8.1']
         php: ['8.0']
         stability: [ prefer-lowest, prefer-stable ]
         symfony-version: ['5.4', '6.0']
