--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "php": ">=8.0.2",
         "symfony/console": "^5.4 || ^6.0",
         "doctrine/orm": "^2.9",
-        "doctrine/doctrine-bundle": "^2.4.2",
+        "doctrine/doctrine-bundle": "^2.6",
         "doctrine/collections": "^1.6.8",
         "doctrine/dbal": "^2.13.3 || ^3.0",
-        "doctrine/persistence": "^2.2.2",
+        "doctrine/persistence": "^2.5 || ^3.0",
         "laminas/laminas-code": "^4.4",
         "dragonmantank/cron-expression": "^3.1",
         "symfony/framework-bundle": "^5.4 || ^6.0",
@@ -47,15 +47,16 @@
         "lorisleiva/cron-translator": "^0.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.9",
-        "symfony/phpunit-bridge": "^5.4 || ^6.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4.0",
-        "symfony/debug-bundle": "^5.4 || ^6.0",
-        "symfony/dom-crawler": "^5.4 || ^6.0",
-        "symfony/css-selector": "^5.4 || ^6.0",
-        "liip/test-fixtures-bundle": "^2.1.0",
+        "liip/test-fixtures-bundle": "^2.3.0",
+        "phpunit/phpunit": "^9.5.9",
         "symfony/browser-kit": "^5.4 || ^6.0",
-        "symfony/maker-bundle": "^1.33",
+        "symfony/css-selector": "^5.4 || ^6.0",
+        "symfony/debug-bundle": "^5.4 || ^6.0",
+        "symfony/notifier": "^5.4 || ^6.0",
+        "symfony/dom-crawler": "^5.4 || ^6.0",
+        "symfony/maker-bundle": "^1.40",
+        "symfony/phpunit-bridge": "^5.4 || ^6.0",
         "jetbrains/phpstorm-attributes": "^1.0"
     },
     "suggest": {
