--- a/composer.json
+++ b/composer.json
@@ -43,20 +43,21 @@
         "symfony/routing": "^5.4 || ^6.0",
         "symfony/yaml": "^5.4 || ^6.0",
         "twig/twig": "^3.4",
-        "lorisleiva/cron-translator": "^0.3"
+        "lorisleiva/cron-translator": "^0.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.9",
         "symfony/phpunit-bridge": "^5.4 || ^6.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4.0",
+        "phpstan/phpstan": "^1.8",
         "symfony/debug-bundle": "^5.4 || ^6.0",
         "symfony/dom-crawler": "^5.4 || ^6.0",
         "symfony/css-selector": "^5.4 || ^6.0",
         "symfony/var-dumper": "^5.4 || ^6.0",
-        "liip/test-fixtures-bundle": "^2.1.0",
+        "liip/test-fixtures-bundle": "^2.4.0",
         "symfony/browser-kit": "^5.4 || ^6.0",
-        "symfony/maker-bundle": "^1.33",
-        "jetbrains/phpstorm-attributes": "^1.0"
+        "symfony/notifier": "^5.4 || ^6.0",
+        "symfony/maker-bundle": "^1.33"
     },
     "suggest": {
         "ext-pcntl": "For using the scheduler daemon",
@@ -74,6 +75,9 @@
         "psr-4": {
             "App\\Tests\\": "Tests/"
         }
+    },
+    "scripts": {
+        "phpstan": "phpstan analyse"
     },
     "config": {
         "preferred-install": {
