--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "lorisleiva/cron-translator": "^0.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^9.6 || ^10.0",
         "symfony/phpunit-bridge": "^5.4 || ^6.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4.0",
         "phpstan/phpstan": "^1.10",
