--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -11,17 +11,20 @@ jobs:
       matrix:
         php: ['8.0']
         stability: [ prefer-stable ]
-        symfony-version: [6.2.*']
+        symfony-version: ['6.2.*']
         include:
           - php: '8.0'
             symfony-version: 5.4.*
             stability: prefer-lowest
           - php: '8.1'
             symfony-version: 5.4.*
+            stability: prefer-stable
           - php: '8.1'
             symfony-version: 6.2.*
+            stability: prefer-stable
           - php: '8.2'
             symfony-version: 6.2.*
+            stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - ${{ matrix.symfony-version }} - ${{ matrix.stability }}
     steps:
