--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "symfony/var-dumper": "^5.4 || ^6.0",
         "liip/test-fixtures-bundle": "^2.5",
         "symfony/browser-kit": "^5.4 || ^6.0",
+        "symfony/dotenv": "^5.4 || ^6.0",
         "symfony/notifier": "^5.4 || ^6.0",
         "symfony/maker-bundle": "^1.48"
     },
