--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "liip/test-fixtures-bundle": "^2.7",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.4",
-        "nesbot/carbon": "dev-master as 3.0",
+        "nesbot/carbon": "3.x-dev as 3.0",
         "symfony/browser-kit": "^6.4 || ^7.0",
         "symfony/css-selector": "^6.4 || ^7.0",
         "symfony/debug-bundle": "^6.4 || ^7.0",
