--- a/composer.json
+++ b/composer.json
@@ -17,28 +17,28 @@
     ],
     "require": {
         "php": ">=8.2",
-        "symfony/console": "^6.4 || ^7.0",
-        "doctrine/orm": "^2.15",
-        "doctrine/doctrine-bundle": "^2.11",
         "doctrine/collections": "^2.1",
         "doctrine/dbal": "^3.7",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/orm": "^2.15",
         "doctrine/persistence": "^3.2",
         "dragonmantank/cron-expression": "^3.3",
+        "knplabs/knp-time-bundle": "^2.2",
         "lorisleiva/cron-translator": "^0.4.4",
-        "symfony/framework-bundle": "^6.4 || ^7.0",
-        "symfony/twig-bundle": "^6.4 || ^7.0",
-        "symfony/translation": "^6.4 || ^7.0",
+        "symfony/asset": "^6.4 || ^7.0",
+        "symfony/config": "^6.4 || ^7.0",
+        "symfony/console": "^6.4 || ^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
         "symfony/finder": "^6.4 || ^7.0",
         "symfony/form": "^6.4 || ^7.0",
-        "symfony/asset": "^6.4 || ^7.0",
-        "symfony/validator": "^6.4 || ^7.0",
-        "nesbot/carbon": "^3.0@dev",
-        "symfony/lock": "^6.4 || ^7.0",
-        "symfony/config": "^6.4 || ^7.0",
-        "symfony/dependency-injection": "^6.4 || ^7.0",
-        "symfony/property-access": "^6.4 || ^7.0",
+        "symfony/framework-bundle": "^6.4 || ^7.0",
         "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/lock": "^6.4 || ^7.0",
+        "symfony/property-access": "^6.4 || ^7.0",
         "symfony/routing": "^6.4 || ^7.0",
+        "symfony/translation": "^6.4 || ^7.0",
+        "symfony/twig-bundle": "^6.4 || ^7.0",
+        "symfony/validator": "^6.4 || ^7.0",
         "symfony/yaml": "^6.4 || ^7.0",
         "twig/twig": "^3.8"
     },
