--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -38,7 +38,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: pcov, dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
+          extensions: pcov, curl, libxml, pcntl, pdo
           coverage: pcov
 
       - name: Install dependencies
@@ -47,7 +47,7 @@ jobs:
         run: |
           composer global config --no-plugins allow-plugins.symfony/flex true
           composer global require --no-progress --no-scripts --no-plugins symfony/flex
-          composer update --no-interaction --prefer-dist --optimize-autoloader
+          composer update --no-interaction --prefer-dist
           vendor/bin/simple-phpunit install
 
       - name: Execute tests
