--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "symfony/form": "^5.4 || ^6.0",
         "symfony/asset": "^5.4 || ^6.0",
         "symfony/validator": "^5.4 || ^6.0",
-        "nesbot/carbon": "^2.53",
+        "nesbot/carbon": "^2.69 || ^3.0",
         "symfony/lock": "^5.4 || ^6.0",
         "symfony/config": "^5.4 || ^6.0",
         "symfony/dependency-injection": "^5.4 || ^6.0",
@@ -45,7 +45,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.6 || ^10.0, < 10.1",
         "symfony/phpunit-bridge": "^5.4 || ^6.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.4.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.5.0",
         "phpstan/phpstan": "^1.10",
         "symfony/debug-bundle": "^5.4 || ^6.0",
         "symfony/dom-crawler": "^5.4 || ^6.0",
