--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     ],
     "require": {
         "php": ">=8.2",
-        "doctrine/orm": "^2.17.2",
+        "doctrine/orm": "^2.17.5 || ^3.0.0",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/collections": "^2.1",
-        "doctrine/dbal": "^3.7",
+        "doctrine/dbal": "^3.8.1",
         "doctrine/persistence": "^3.2",
         "dragonmantank/cron-expression": "^3.3",
         "knplabs/knp-time-bundle": "^2.2",
-        "lorisleiva/cron-translator": "^0.4.4",
+        "lorisleiva/cron-translator": "^0.4.5",
         "symfony/asset": "^7.0",
         "symfony/config": "^7.0",
         "symfony/console": "^7.0",
