--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "symfony/form": "^7.0",
         "symfony/validator": "^7.0",
         "symfony/lock": "^7.0",
-        "symfony/dependency-injection": "^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
         "symfony/property-access": "^7.0",
         "symfony/http-kernel": "^7.0",
         "symfony/routing": "^7.0",
