--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "doctrine/orm": "^2.17.5 || ^3.0.0",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/collections": "^2.1",
-        "doctrine/dbal": "^3.8.1",
+        "doctrine/dbal": "^3.8.1 || ^4.0.0",
         "doctrine/persistence": "^3.2",
         "dragonmantank/cron-expression": "^3.3",
         "knplabs/knp-time-bundle": "^2.2",
