chore: add testrun for php 8.4

--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -19,6 +19,9 @@ jobs:
           - php: '8.3'
             symfony-version: 7.0.*
             stability: prefer-stable
+          - php: '8.4'
+            symfony-version: 7.0.*
+            stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - ${{ matrix.symfony-version }} - ${{ matrix.stability }}
     steps:
@@ -59,7 +62,7 @@ jobs:
       #- uses: actions/checkout@v4
       #- uses: shivammathur/setup-php@v2
         #with:
-          #php-version: 8.2
+          #php-version: 8.3
           #coverage: none # disable xdebug, pcov
       #- run: composer install --no-progress
       #- run: composer cscheck
@@ -71,7 +74,7 @@ jobs:
       #- uses: actions/checkout@v4
       #- uses: shivammathur/setup-php@v2
         #with:
-          #php-version: 8.2
+          #php-version: 8.3
           #coverage: none # disable xdebug, pcov
       #- run: composer install --no-progress
       #- run: composer phpstan
