test: fix deprecation for doctrine-bundle 2.12

--- a/Tests/App/config/config_test.yml
+++ b/Tests/App/config/config_test.yml
@@ -42,6 +42,8 @@ doctrine:
                 is_bundle: false
                 prefix: Dukecity\CommandSchedulerBundle\Entity
                 alias: CommandSchedulerBundle
+        controller_resolver:
+            auto_mapping: true
 
 dukecity_command_scheduler:
     lock_timeout: 300
