feat: improvements for symfony 7.3, fix deprecations, remove logPath as parameter

--- a/Tests/App/config/config_test.yml
+++ b/Tests/App/config/config_test.yml
@@ -20,8 +20,9 @@ framework:
         enabled: false
         collect: false
 
-    property_info:
-        with_constructor_extractor: true
+    # since symfony 7.3
+    #property_info:
+        #with_constructor_extractor: true
 
 
 doctrine:
