--- a/Tests/App/config/config_test.yml
+++ b/Tests/App/config/config_test.yml
@@ -20,6 +20,11 @@ framework:
         enabled: false
         collect: false
 
+    # since symfony 7.3
+    #property_info:
+        #with_constructor_extractor: true
+
+
 doctrine:
     dbal:
         driver:   pdo_sqlite
