--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.1",
         "liip/test-fixtures-bundle": "^3.4",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^12.2.1",
+        "phpunit/phpunit": "^11.5.22 || 12.2.1",
         "symfony/browser-kit": "^7.2",
         "symfony/css-selector": "^7.2",
         "symfony/debug-bundle": "^7.2",
