feat: bump min versions symfony 7.2 => 7.3

--- a/Tests/App/config/config_test.yml
+++ b/Tests/App/config/config_test.yml
@@ -20,9 +20,8 @@ framework:
         enabled: false
         collect: false
 
-    # since symfony 7.3
-    #property_info:
-        #with_constructor_extractor: true
+    property_info:
+        with_constructor_extractor: true
 
 
 doctrine:
