--- a/Tests/App/config/config_test.yml
+++ b/Tests/App/config/config_test.yml
@@ -38,6 +38,8 @@ doctrine:
         auto_mapping: false
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         enable_lazy_ghost_objects: true
+        report_fields_where_declared: true
+
         mappings:
             # added for type: "attribute"
             Dukecity\CommandSchedulerBundle:
