--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -22,6 +22,9 @@ jobs:
           - php: '8.4'
             symfony-version: 7.3.*
             stability: prefer-stable
+          - php: '8.5'
+            symfony-version: 7.3.*
+            stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - ${{ matrix.symfony-version }} - ${{ matrix.stability }}
     steps:
