--- a/.github/workflows/tests-upcoming-symfony.yaml
+++ b/.github/workflows/tests-upcoming-symfony.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: 'Install PHP with extensions'
-        uses: shivammathur/setup-php@2
+        uses: shivammathur/setup-php@v2
         with:
           coverage: none
           php-version: '8.4'
