--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     "require": {
         "php": ">=8.2",
         "doctrine/orm": "^2.20.6 || ^3.5",
-        "doctrine/doctrine-bundle": "^2.16",
+        "doctrine/doctrine-bundle": "^2.18.0 || ^3.0",
         "doctrine/collections": "^2.3",
-        "doctrine/dbal": "^3.9.3 || ^4.3",
-        "doctrine/persistence": "^3.4 || ^4.1",
+        "doctrine/dbal": "^3.10.3 || ^4.3",
+        "doctrine/persistence": "^3.4.1 || ^4.1",
         "dragonmantank/cron-expression": "^3.4",
         "knplabs/knp-time-bundle": "^2.4",
         "lorisleiva/cron-translator": "^0.4.6",
@@ -43,10 +43,10 @@
         "twig/twig": "^3.21"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^4.1",
-        "liip/test-fixtures-bundle": "^3.5",
+        "doctrine/doctrine-fixtures-bundle": "^4.2",
+        "liip/test-fixtures-bundle": "^3.6",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.42 || ^12.4.0",
+        "phpunit/phpunit": "^11.5.42 || ^12.4.1",
         "symfony/browser-kit": "^7.3",
         "symfony/css-selector": "^7.3",
         "symfony/debug-bundle": "^7.3",
