--- a/composer.json
+++ b/composer.json
@@ -19,44 +19,44 @@
         "php": ">=8.2",
         "doctrine/orm": "^2.20.6 || ^3.5",
         "doctrine/doctrine-bundle": "^2.18.0 || ^3.0",
-        "doctrine/collections": "^2.3",
+        "doctrine/collections": "^2.4",
         "doctrine/dbal": "^3.10.3 || ^4.3",
         "doctrine/persistence": "^3.4.1 || ^4.1",
-        "dragonmantank/cron-expression": "^3.4",
+        "dragonmantank/cron-expression": "^3.6",
         "knplabs/knp-time-bundle": "^2.4",
         "lorisleiva/cron-translator": "^0.4.6",
-        "symfony/asset": "^7.3",
-        "symfony/config": "^7.3",
-        "symfony/console": "^7.3",
-        "symfony/framework-bundle": "^7.3",
-        "symfony/twig-bundle": "^7.3",
-        "symfony/translation": "^7.3",
-        "symfony/finder": "^7.3",
-        "symfony/form": "^7.3",
-        "symfony/validator": "^7.3",
-        "symfony/lock": "^7.3",
-        "symfony/dependency-injection": "^7.3",
-        "symfony/property-access": "^7.3",
-        "symfony/http-kernel": "^7.3",
-        "symfony/routing": "^7.3",
-        "symfony/yaml": "^7.3",
-        "twig/twig": "^3.21"
+        "symfony/asset": "^7.4 || ^8.0",
+        "symfony/config": "^7.4 || ^8.0",
+        "symfony/console": "^7.4 || ^8.0",
+        "symfony/framework-bundle": "^7.4 || ^8.0",
+        "symfony/twig-bundle": "^7.4 || ^8.0",
+        "symfony/translation": "^7.4 || ^8.0",
+        "symfony/finder": "^7.4 || ^8.0",
+        "symfony/form": "^7.4 || ^8.0",
+        "symfony/validator": "^7.4 || ^8.0",
+        "symfony/lock": "^7.4 || ^8.0",
+        "symfony/dependency-injection": "^7.4 || ^8.0",
+        "symfony/property-access": "^7.4 || ^8.0",
+        "symfony/http-kernel": "^7.4 || ^8.0",
+        "symfony/routing": "^7.4 || ^8.0",
+        "symfony/yaml": "^7.4 || ^8.0",
+        "twig/twig": "^3.22"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^4.2",
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
         "liip/test-fixtures-bundle": "^3.6",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.42 || ^12.4.1",
-        "symfony/browser-kit": "^7.3",
-        "symfony/css-selector": "^7.3",
-        "symfony/debug-bundle": "^7.3",
-        "symfony/dom-crawler": "^7.3",
-        "symfony/dotenv": "^7.3",
-        "symfony/phpunit-bridge": "^7.3",
-        "symfony/http-client": "^7.3",
-        "symfony/notifier": "^7.3",
+        "phpunit/phpunit": "^11.5.44 || ^12.4.3",
+        "symfony/browser-kit": "^7.4 || ^8.0",
+        "symfony/css-selector": "^7.4 || ^8.0",
+        "symfony/debug-bundle": "^7.4 || ^8.0",
+        "symfony/dom-crawler": "^7.4 || ^8.0",
+        "symfony/dotenv": "^7.4 || ^8.0",
+        "symfony/phpunit-bridge": "^7.4 || ^8.0",
+        "symfony/http-client": "^7.4 || ^8.0",
+        "symfony/notifier": "^7.4 || ^8.0",
         "symfony/maker-bundle": "^1.64",
-        "symfony/var-dumper": "^7.3"
+        "symfony/var-dumper": "^7.4 || ^8.0"
     },
     "suggest": {
         "ext-pcntl": "For using the scheduler daemon",
@@ -76,7 +76,7 @@
         }
     },
     "scripts": {
-        "phpstan": "phpstan analyse"
+        "phpstan": "phpstan analyse --memory-limit=2048M"
     },
     "config": {
         "preferred-install": {
@@ -87,7 +87,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^7.3"
+            "require": "^7.4 || ^8.0"
         }
     }
 }
