feat: bump min versions allow symfony 8

--- a/composer.json
+++ b/composer.json
@@ -89,5 +89,7 @@
             "allow-contrib": false,
             "require": "^7.4 || ^8.0"
         }
-    }
+    },
+    "minimum-stability": "rc",
+    "prefer-stable": true
 }
