--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,6 @@
             "require": "^7.4 || ^8.0"
         }
     },
-    "minimum-stability": "rc",
+    "minimum-stability": "RC",
     "prefer-stable": true
 }
