--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -25,6 +25,9 @@ jobs:
           - php: '8.5'
             symfony-version: 7.4.*
             stability: prefer-stable
+          - php: '8.5'
+            symfony-version: 8.0.*
+            stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - ${{ matrix.symfony-version }} - ${{ matrix.stability }}
     steps:
