--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=8.2",
         "doctrine/orm": "^2.20.8 || ^3.5",
-        "doctrine/doctrine-bundle": "^2.18.0 || ^3.0",
+        "doctrine/doctrine-bundle": "^2.18.0 || ^3.1",
         "doctrine/collections": "^2.4",
         "doctrine/dbal": "^3.10.3 || ^4.3",
         "doctrine/persistence": "^3.4.1 || ^4.1",
@@ -43,10 +43,10 @@
         "twig/twig": "^3.22"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^4.3",
-        "liip/test-fixtures-bundle": "^3.6",
+        "doctrine/doctrine-fixtures-bundle": "^4.3 || 4.3.x-dev",
+        "liip/test-fixtures-bundle": "^3.7",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.44 || ^12.4.3",
+        "phpunit/phpunit": "^11.5.44 || ^12.4.4",
         "symfony/browser-kit": "^7.4 || ^8.0",
         "symfony/css-selector": "^7.4 || ^8.0",
         "symfony/debug-bundle": "^7.4 || ^8.0",
@@ -55,7 +55,7 @@
         "symfony/phpunit-bridge": "^7.4 || ^8.0",
         "symfony/http-client": "^7.4 || ^8.0",
         "symfony/notifier": "^7.4 || ^8.0",
-        "symfony/maker-bundle": "^1.64",
+        "symfony/maker-bundle": "^1.65",
         "symfony/var-dumper": "^7.4 || ^8.0"
     },
     "suggest": {
@@ -90,6 +90,6 @@
             "require": "^7.4 || ^8.0"
         }
     },
-    "minimum-stability": "RC",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
