--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "doctrine/orm": "^2.20.8 || ^3.5",
         "doctrine/doctrine-bundle": "^2.18.0 || ^3.1",
         "doctrine/collections": "^2.4",
-        "doctrine/dbal": "^3.10.3 || ^4.3",
+        "doctrine/dbal": "^3.10.4 || ^4.4",
         "doctrine/persistence": "^3.4.1 || ^4.1",
         "dragonmantank/cron-expression": "^3.6",
         "knplabs/knp-time-bundle": "^2.4",
@@ -43,10 +43,10 @@
         "twig/twig": "^3.22"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^4.3 || 4.3.x-dev",
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
         "liip/test-fixtures-bundle": "^3.7",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.44 || ^12.4.4",
+        "phpunit/phpunit": "^11.5.44 || ^12.4.5",
         "symfony/browser-kit": "^7.4 || ^8.0",
         "symfony/css-selector": "^7.4 || ^8.0",
         "symfony/debug-bundle": "^7.4 || ^8.0",
