feat: allow symfony 8 and bump min versions (#160)
* feat: bump min versions
allow symfony 8

--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -11,19 +11,22 @@ jobs:
       matrix:
         php: ['8.2']
         stability: [ prefer-stable ]
-        symfony-version: ['7.3.*']
+        symfony-version: ['7.4.*']
         include:
           - php: '8.2'
-            symfony-version: 7.3.*
+            symfony-version: 7.4.*
             stability: prefer-lowest
           - php: '8.3'
-            symfony-version: 7.3.*
+            symfony-version: 7.4.*
             stability: prefer-stable
           - php: '8.4'
-            symfony-version: 7.3.*
+            symfony-version: 7.4.*
             stability: prefer-stable
           - php: '8.5'
-            symfony-version: 7.3.*
+            symfony-version: 7.4.*
+            stability: prefer-stable
+          - php: '8.5'
+            symfony-version: 8.0.*
             stability: prefer-stable
 
     name: PHP ${{ matrix.php }} - ${{ matrix.symfony-version }} - ${{ matrix.stability }}
