--- a/composer.json
+++ b/composer.json
@@ -16,46 +16,46 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
-        "doctrine/orm": "^2.20.8 || ^3.5",
-        "doctrine/doctrine-bundle": "^2.18.0 || ^3.1",
-        "doctrine/dbal": "^3.10.4 || ^4.4",
-        "doctrine/persistence": "^3.4.1 || ^4.1",
+        "php": ">=8.4",
+        "doctrine/orm": "^3.6",
+        "doctrine/doctrine-bundle": "^3.2",
+        "doctrine/dbal": "^4.4",
+        "doctrine/persistence": "^4.1",
         "dragonmantank/cron-expression": "^3.6",
-        "knplabs/knp-time-bundle": "^2.4",
+        "knplabs/knp-time-bundle": "^2.5",
         "lorisleiva/cron-translator": "^0.4.6",
-        "symfony/asset": "^7.4 || ^8.0",
-        "symfony/config": "^7.4 || ^8.0",
-        "symfony/console": "^7.4 || ^8.0",
-        "symfony/framework-bundle": "^7.4 || ^8.0",
-        "symfony/twig-bundle": "^7.4 || ^8.0",
-        "symfony/translation": "^7.4 || ^8.0",
-        "symfony/finder": "^7.4 || ^8.0",
-        "symfony/form": "^7.4 || ^8.0",
-        "symfony/validator": "^7.4 || ^8.0",
-        "symfony/lock": "^7.4 || ^8.0",
-        "symfony/dependency-injection": "^7.4 || ^8.0",
-        "symfony/property-access": "^7.4 || ^8.0",
-        "symfony/http-kernel": "^7.4 || ^8.0",
-        "symfony/routing": "^7.4 || ^8.0",
-        "symfony/yaml": "^7.4 || ^8.0",
-        "twig/twig": "^3.22"
+        "symfony/asset": "^8.0",
+        "symfony/config": "^8.0",
+        "symfony/console": "^8.0",
+        "symfony/framework-bundle": "^8.0",
+        "symfony/twig-bundle": "^8.0",
+        "symfony/translation": "^8.0",
+        "symfony/finder": "^8.0",
+        "symfony/form": "^8.0",
+        "symfony/validator": "^8.0",
+        "symfony/lock": "^8.0",
+        "symfony/dependency-injection": "^8.0",
+        "symfony/property-access": "^8.0",
+        "symfony/http-kernel": "^8.0",
+        "symfony/routing": "^8.0",
+        "symfony/yaml": "^8.0",
+        "twig/twig": "^3.23"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.3",
-        "liip/test-fixtures-bundle": "^3.7",
+        "liip/test-fixtures-bundle": "^3.8",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.48 || ^12.5.6",
-        "symfony/browser-kit": "^7.4 || ^8.0",
-        "symfony/css-selector": "^7.4 || ^8.0",
-        "symfony/debug-bundle": "^7.4 || ^8.0",
-        "symfony/dom-crawler": "^7.4 || ^8.0",
-        "symfony/dotenv": "^7.4 || ^8.0",
-        "symfony/phpunit-bridge": "^7.4 || ^8.0",
-        "symfony/http-client": "^7.4 || ^8.0",
-        "symfony/notifier": "^7.4 || ^8.0",
+        "phpunit/phpunit": "^12.5.8",
+        "symfony/browser-kit": "^8.0",
+        "symfony/css-selector": "^8.0",
+        "symfony/debug-bundle": "^8.0",
+        "symfony/dom-crawler": "^8.0",
+        "symfony/dotenv": "^8.0",
+        "symfony/phpunit-bridge": "^8.0",
+        "symfony/http-client": "^8.0",
+        "symfony/notifier": "^8.0",
         "symfony/maker-bundle": "^1.65",
-        "symfony/var-dumper": "^7.4 || ^8.0"
+        "symfony/var-dumper": "^8.0"
     },
     "suggest": {
         "ext-pcntl": "For using the scheduler daemon",
@@ -86,7 +86,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^7.4 || ^8.0"
+            "require": "^8.0"
         }
     },
     "minimum-stability": "dev",
