--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.3",
         "liip/test-fixtures-bundle": "^3.7",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5.48 || ^12.5.6",
+        "phpunit/phpunit": "^11.5.48 || ^12.5.6 || ^13.0.1",
         "symfony/browser-kit": "^7.4 || ^8.0",
         "symfony/css-selector": "^7.4 || ^8.0",
         "symfony/debug-bundle": "^7.4 || ^8.0",
